# Escultor-digital-PII

./: CMakeLists.txt  cutbox.cpp  cutbox.h  cutellipsoid.cpp  cutellipsoid.h  cutsphere.cpp  cutsphere.h  cutvoxel.cpp  cutvoxel.h  figurageometrica.h  interpretador.cpp  interpretador.h  main.cpp  putbox.cpp  putbox.h  putellipsoid.cpp  putellipsoid.h  putsphere.cpp  putsphere.h  putvoxel.cpp  putvoxel.h  sculptor.cpp  sculptor.h
file/: arquivo-zumbi.txt  zumbi3D.OFF
file/docs/html/: annotated.html  class_cut_box-members.html  class_cut_box.html  class_cut_ellipsoid-members.html  class_cut_ellipsoid.html  class_cut_sphere-members.html  class_cut_sphere.html  class_cut_voxel-members.html  class_cut_voxel.html  class_figura_geometrica-members.html  class_figura_geometrica.html  class_interpretador-members.html  class_interpretador.html  class_put_box-members.html  class_put_box.html  class_put_ellipsoid-members.html  class_put_ellipsoid.html  class_put_sphere-members.html  class_put_sphere.html  class_put_voxel-members.html  class_put_voxel.html  class_sculptor-members.html  class_sculptor.html  classes.html  cutbox_8cpp.html  cutbox_8h.html  cutbox_8h_source.html  cutellipsoid_8cpp.html  cutellipsoid_8h.html  cutellipsoid_8h_source.html  cutsphere_8cpp.html  cutsphere_8h.html  cutsphere_8h_source.html  cutvoxel_8cpp.html  cutvoxel_8h.html  cutvoxel_8h_source.html  figurageometrica_8h.html  figurageometrica_8h_source.html  files.html  functions.html  (+27 more)
file/docs/html/search/: all_2.js  all_3.js  all_5.js  all_6.js  all_9.js  all_b.js  functions_0.js  functions_5.js  (+7 more)
